Moved new logo to style guide and changed img path to new image.

--- a/P01_Deliverable_03/styleGuide.html
+++ b/P01_Deliverable_03/styleGuide.html
@@ -15,7 +15,7 @@
   </head>
   <body>
 
-    <h1 id="top"><img src="images/logo.png" id="logo" alt="header-image"/>Footy Fans Style Guide</h1>
+    <h1 id="top"><img src="images/logo_blue_gold.png" id="logo" alt="header-image"/>Footy Fans Style Guide</h1>
     <div class="div-container box">
       <nav class="nav-item-list box-nav-item">
         <ul id="nav-list">
