Added a color to the website. and changed the style guide.

--- a/Style_Guide/styleGuide.html
+++ b/Style_Guide/styleGuide.html
@@ -508,6 +508,9 @@
           <section id="design">
             <h3>Design</h3>
             <h4>Footy Fans Color Swatches</h4>
+            <img src="images/color5.png" alt="color-5-gunmetal-grey">
+            <p>For the header, we use a grey color. As the other elements of the website is colorful, it is important to highlight those important aspects, allowing the user to focus on those instead.</p>
+
             <img src="images/color1.png" alt="color-1-blue">
             <p>A dark blue color is used as the primary theme for Footy Fans. Not only does the dark blue color represent a professional theme, it is also similar to the main color of the Champion's League, a highly contested and important football competition to many players and fans alike. As the color is professional and important to football fans, we use this color to reflect our professionalism and dedication to football.</p>
             <img src="images/color2.png" alt="color-1-purple">
