Axure files are not in the repo, therefore the axure button is removed.

--- a/Style_Guide/styleGuide.html
+++ b/Style_Guide/styleGuide.html
@@ -22,7 +22,7 @@
             <li><button onclick="showHide('interactive-elements')" class="nav-button">Interactive Elements</button></li>
             <li><button onclick="showHide('text-styling')" class="nav-button">Text Styling</button></li>
             <li><button onclick="showHide('combined-elements')" class="nav-button">Combined Elements</button></li>
-            <li><button onclick="linkTo('P01Axure/start_with_pages.html')" class="nav-button">Axure Wireframes</button></li>
+            <!-- <li><button onclick="linkTo('P01Axure/start_with_pages.html')" class="nav-button">Axure Wireframes</button></li> -->
             <li><button onclick="linkTo('citationPage.html')" class="nav-button">Citation Page</button></li>
         </ul>
       </nav>
