--- a/index.html
+++ b/index.html
@@ -8,31 +8,42 @@
 
 	<header>
 	  	<!-- logo? -->
-	  	<a href="index.html" class="nav-main-item">home</a>
+      <div class="header-menu container">
 
-	  	<nav class="nav-main">
-	  	  <a href="browse.html" class="nav-main-item">browse</a>
-	      <a href="updates.html" class="nav-main-item">updates</a>
-	      <a href="about.html" class="nav-main-item">about</a>
-	      <a href="profile.html" class="nav-main-item">profile</a>
-	    </nav>
 
-	    <!-- search bar -->
-	    <div></div>
-		<!-- potential icon +/ text? -->
-	    <a href="cart.html" class="nav-main-item">shopping cart</a>
+  	  	<div class="header-row-1">
+          <a href="index.html" class="nav-main-item"><img src="" alt="Logo"/></a>
+          <nav class="nav-row-1">
+            <a href="cart.html" class="nav-main-item">shopping cart</a>
+    	      <a href="profile.html" class="nav-main-item">profile</a>
+          </nav>
+  	    </div>
+
+  	    <!-- search bar -->
+  	    <div class="header-row-2">
+        </div>
+
+        <div class="header-row-3">
+    		  <nav class="nav-row-2">
+            <a href="browse.html" class="nav-main-item">browse</a>
+    	      <a href="updates.html" class="nav-main-item">updates</a>
+            <a href="wishlist.html" class="nav-main-item">Wishlist</a>
+    	      <a href="about.html" class="nav-main-item">about</a>
+          </nav>
+        </div>
+
 	</header>
 
 	<!-- content -->
-	<div>
+	<div class="main-content container">
 
 		<!-- on sale -->
-		<div>
+		<div class="content-item section-item-1">
 			<a href="detailedProduct.html" class="nav-detailed">detailed product</a>
 		</div>
 
 		<!-- recommended -->
-		<div>
+		<div class="content-item section-item-2">
 		</div>
 	</div>
 
