--- a/profile.html
+++ b/profile.html
@@ -6,22 +6,33 @@
   </head>
   <body>
 
-	<header>
-	  	<!-- logo? -->
-	  	<a href="index.html" class="nav-main-item">home</a>
+    <header>
+  	  	<!-- logo? -->
+        <div class="header-menu container">
 
-	  	<nav class="nav-main">
-	  	  <a href="browse.html" class="nav-main-item">browse</a>
-	      <a href="updates.html" class="nav-main-item">updates</a>
-	      <a href="about.html" class="nav-main-item">about</a>
-	      <a href="profile.html" class="nav-main-item">profile</a>
-	    </nav>
 
-	   	<!-- search bar -->
-	    <div></div>
-		<!-- potential icon +/ text? -->
-	    <a href="cart.html" class="nav-main-item">shopping cart</a>
-	</header>
+    	  	<div class="header-row-1">
+            <a href="index.html" class="nav-main-item"><img src="" alt="Logo"/></a>
+            <nav class="nav-row-1">
+              <a href="cart.html" class="nav-main-item">shopping cart</a>
+      	      <a href="profile.html" class="nav-main-item">profile</a>
+            </nav>
+    	    </div>
+
+    	    <!-- search bar -->
+    	    <div class="header-row-2">
+          </div>
+
+          <div class="header-row-3">
+      		  <nav class="nav-row-2">
+              <a href="browse.html" class="nav-main-item">browse</a>
+      	      <a href="updates.html" class="nav-main-item">updates</a>
+              <a href="wishlist.html" class="nav-main-item">Wishlist</a>
+      	      <a href="about.html" class="nav-main-item">about</a>
+            </nav>
+          </div>
+
+  	</header>
 
 	<!-- content -->
 	<div>
@@ -47,7 +58,7 @@
 
 	</div>
 
-	
+
 
   </body>
 </html>
