--- a/profile.html
+++ b/profile.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>profile</title>
+
+    <link rel="stylesheet" href="css/normalize.css"> 
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/grid.css">
   </head>
   <body>
 
@@ -35,7 +40,7 @@
   	</header>
 
 	<!-- content -->
-	<div>
+	<div class="main-content container">
 		<!-- profile information -->
 		<div>
 		</div>
