--- a/browse.html
+++ b/browse.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>browse</title>
+
+    <link rel="stylesheet" href="css/normalize.css"> 
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/grid.css">
   </head>
   <body>
 
@@ -35,13 +40,15 @@
   	</header>
 
 	<!-- content -->
-	<div>
+	<div class="main-content container">
 		<!-- search and filter -->
 		<div>
 		</div>
 		<!-- browse list -->
 		<div>
 		</div>
+
+    <a href="detailedProduct.html">detailedProduct</a>
 
 	</div>
 
