--- a/cart.html
+++ b/cart.html
@@ -3,6 +3,11 @@
   <head>
     <meta charset="utf-8" />
     <title>shopping cart</title>
+
+    <link rel="stylesheet" href="css/normalize.css"> 
+    <link rel="stylesheet" href="css/main.css">
+    <link rel="stylesheet" href="css/font.css">
+    <link rel="stylesheet" href="css/grid.css">
   </head>
   <body>
 
@@ -35,9 +40,10 @@
   	</header>
 
 	<!-- content -->
-	<div>
+	<div class="main-content container">
 		<!-- shopping cart list -->
 		<div>
+      <a href="shipping.html">shipping method</a>
 		</div>
 
 	</div>
