--- a/reviews.html
+++ b/reviews.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>detailedProductName</title>
+    <title>about</title>
 
     <link rel="stylesheet" href="css/normalize.css"> 
     <link rel="stylesheet" href="css/main.css">
@@ -41,12 +41,10 @@
 
 	<!-- content -->
 	<div class="main-content container">
-		<!-- detailed product -->
-		<div>
-      <a href="cart.html">shopping cart</a>
-		</div>
 
 	</div>
+
+
 
   </body>
 </html>
