Finished preliminary style changes on the header.

--- a/cart.html
+++ b/cart.html
@@ -2,33 +2,39 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>shopping cart</title>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="css/grid.css">
+    <link rel="stylesheet" href="css/styles.css">
+    <title>Cart</title>
   </head>
   <body>
 
     <header>
   	  	<!-- logo? -->
-        <div class="header-menu container">
+        <div class="header-menu ">
 
 
     	  	<div class="header-row-1">
-            <a href="index.html" class="nav-main-item"><img src="" alt="Logo"/></a>
+            <a href="index.html" class="nav-main-logo"><img src="" alt="Logo" width="225" height="80"/></a>
             <nav class="nav-row-1">
-              <a href="cart.html" class="nav-main-item">shopping cart</a>
-      	      <a href="profile.html" class="nav-main-item">profile</a>
+              <a href="cart.html" class="nav-main-item">Cart</a>
+      	      <a href="profile.html" class="nav-main-item">Profile</a>
             </nav>
     	    </div>
 
+
     	    <!-- search bar -->
     	    <div class="header-row-2">
+            <p>Search Bar Here</p>
+
           </div>
 
           <div class="header-row-3">
-      		  <nav class="nav-row-2">
-              <a href="browse.html" class="nav-main-item">browse</a>
-      	      <a href="updates.html" class="nav-main-item">updates</a>
-              <a href="wishlist.html" class="nav-main-item">Wishlist</a>
-      	      <a href="about.html" class="nav-main-item">about</a>
+      		  <nav class="nav-row-3">
+              <a href="browse.html" class="nav-main-item">Catalog</a>
+      	      <a href="updates.html" class="nav-main-item">News</a>
+
+      	      <a href="about.html" class="nav-main-item">About</a>
             </nav>
           </div>
 
@@ -36,7 +42,7 @@
 
 	<!-- content -->
 	<div>
-		<!-- shopping cart list -->
+		<!-- Cart list -->
 		<div>
 		</div>
 
