add grid to about, browse html
some problem with content tucked behind the header

--- a/about.html
+++ b/about.html
@@ -46,14 +46,32 @@
 	<!-- content -->
 	<div class="main-content container">
 		<!-- contact us -->
-		<div>
-		</div>
-		<!-- store addresses -->
-		<div>
-		</div>
-		<!-- FAQ -->
-		<div>
-		</div>
+    <div class="content-item about-contact">
+      <h3>Contact Us</h3>
+    </div>
+    <!-- store addresses -->
+    <div class="content-item about-addresses">
+      <h3>Store Addresses</h3>
+    </div>
+    
+    <!-- FAQ -->
+    <div class="content-item about-faq">
+
+        <h3>FAQ</h3>
+
+        <p class="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit?</p>
+        <p class="answer">Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
+
+        <p class="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit?</p>
+        <p class="answer">Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
+
+        <p class="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit?</p>
+        <p class="answer">Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
+        
+        <!-- end of faq -->
+      </div>
+
+    <!-- end of main content -->
 	</div>
 
 
