--- a/browse.html
+++ b/browse.html
@@ -46,13 +46,19 @@
 	<!-- content -->
 	<div class="main-content container">
 		<!-- search and filter -->
-		<div>
-		</div>
-		<!-- browse list -->
-		<div>
-		</div>
-
-    <a href="detailedProduct.html">detailedProduct</a>
+    <div class="content-item browse-filter">
+    </div>
+    <!-- browse list -->
+    <div class="content-item browse-list">
+      <div class="item"><a href="detailedProduct.html">detailedProduct</a></div>
+      <div class="item">item</div>
+      <div class="item">item</div>
+      <div class="item">item</div>
+      <div class="item">item</div>
+      <div class="item">item</div>
+      <div class="item">item</div>
+      <div class="item">item</div>
+    </div>
 
 	</div>
 
