Fixed issue where content after header was not appearing.

--- a/index.html
+++ b/index.html
@@ -49,7 +49,8 @@
 
 		<!-- on sale -->
 		<div class="content-item section-item-1">
-			<a href="detailedProduct.html" class="nav-detailed">detailed product</a>
+
+			<a href="detailedProduct.html" class="nav-detailed">Detailed Product</a>
 		</div>
 
 		<!-- recommended -->
