some minor change on title

--- a/detailedProduct.html
+++ b/detailedProduct.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/normalize.css">
     <link rel="stylesheet" href="css/styles.css">
-    <title>detailedProductName</title>
+    <title>DetailedProductName</title>
 
 
   </head>
