--- a/payment.html
+++ b/payment.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <title>about</title>
+    <title>Payment</title>
   </head>
   <body>
 
