--- a/browse.html
+++ b/browse.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <title>browse</title>
+    <title>Browse</title>
   </head>
   <body>
 
