--- a/updates.html
+++ b/updates.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <title>updates_events</title>
+    <title>Updates_events</title>
   </head>
   <body>
 
