--- a/wishlist.html
+++ b/wishlist.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <title>Home</title>
+    <title>Wishlist</title>
   </head>
   <body>
 
