--- a/about.html
+++ b/about.html
@@ -18,10 +18,11 @@
 
 
     	  	<div class="header-row-1">
-            <a href="index.html" class="nav-main-logo"><img src="" alt="Logo" width="225" height="80"/></a>
+            <a href="index.html" class="nav-main-logo"><img src="img/logo_blue_gold.png" alt="Logo"/></a>
             <nav class="nav-row-1">
-              <a href="cart.html" class="nav-main-item">Cart</a>
-      	      <a href="profile.html" class="nav-main-item">Profile</a>
+              <a href="profile.html" class="nav-main-item"><img src="img/profile_icon.png"></a>
+              <a href="cart.html" class="nav-main-item"><img src="img/cart_icon.png"></a>
+
             </nav>
     	    </div>
 
@@ -53,7 +54,7 @@
     <div class="content-item about-addresses">
       <h3>Store Addresses</h3>
     </div>
-    
+
     <!-- FAQ -->
     <div class="content-item about-faq">
 
@@ -67,7 +68,7 @@
 
         <p class="question">Lorem ipsum dolor sit amet, consectetur adipiscing elit?</p>
         <p class="answer">Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
-        
+
         <!-- end of faq -->
       </div>
 
