--- a/detailedProduct.html
+++ b/detailedProduct.html
@@ -20,10 +20,11 @@
 
 
     	  	<div class="header-row-1">
-            <a href="index.html" class="nav-main-logo"><img src="" alt="Logo" width="225" height="80"/></a>
+            <a href="index.html" class="nav-main-logo"><img src="img/logo_blue_gold.png" alt="Logo"/></a>
             <nav class="nav-row-1">
-              <a href="cart.html" class="nav-main-item">Cart</a>
-      	      <a href="profile.html" class="nav-main-item">Profile</a>
+              <a href="profile.html" class="nav-main-item"><img src="img/profile_icon.png"></a>
+              <a href="cart.html" class="nav-main-item"><img src="img/cart_icon.png"></a>
+
             </nav>
     	    </div>
 
@@ -44,7 +45,6 @@
           </div>
 
   	</header>
-
 	<!-- content -->
 	<div class="main-content container">
 		<!-- detailed product -->
