--- a/profile.html
+++ b/profile.html
@@ -13,35 +13,36 @@
   <body>
 
     <header>
-  	  	<!-- logo? -->
+        <!-- logo? -->
         <div class="header-menu ">
 
 
-    	  	<div class="header-row-1">
-            <a href="index.html" class="nav-main-logo"><img src="" alt="Logo" width="225" height="80"/></a>
+          <div class="header-row-1">
+            <a href="index.html" class="nav-main-logo"><img src="img/logo_blue_gold.png" alt="Logo"/></a>
             <nav class="nav-row-1">
-              <a href="cart.html" class="nav-main-item">Cart</a>
-      	      <a href="profile.html" class="nav-main-item">Profile</a>
+              <a href="profile.html" class="nav-main-item"><img src="img/profile_icon.png"></a>
+              <a href="cart.html" class="nav-main-item"><img src="img/cart_icon.png"></a>
+
             </nav>
-    	    </div>
+          </div>
 
 
-    	    <!-- search bar -->
-    	    <div class="header-row-2">
+          <!-- search bar -->
+          <div class="header-row-2">
             <p>Search Bar Here</p>
 
           </div>
 
           <div class="header-row-3">
-      		  <nav class="nav-row-3">
+            <nav class="nav-row-3">
               <a href="browse.html" class="nav-main-item">Catalog</a>
-      	      <a href="updates.html" class="nav-main-item">News</a>
+              <a href="updates.html" class="nav-main-item">News</a>
 
-      	      <a href="about.html" class="nav-main-item">About</a>
+              <a href="about.html" class="nav-main-item">About</a>
             </nav>
           </div>
 
-  	</header>
+    </header>
 
 	<!-- content -->
 	<div class="main-content container">
