--- a/shipping.html
+++ b/shipping.html
@@ -11,34 +11,37 @@
     <title>about</title>
   </head>
   <body>
-
     <header>
-  	  	<!-- logo? -->
-        <div class="header-menu container">
+        <!-- logo? -->
+        <div class="header-menu ">
 
 
-    	  	<div class="header-row-1">
-            <a href="index.html" class="nav-main-item"><img src="" alt="Logo"/></a>
+          <div class="header-row-1">
+            <a href="index.html" class="nav-main-logo"><img src="img/logo_blue_gold.png" alt="Logo"/></a>
             <nav class="nav-row-1">
-              <a href="cart.html" class="nav-main-item">shopping cart</a>
-      	      <a href="profile.html" class="nav-main-item">profile</a>
-            </nav>
-    	    </div>
+              <a href="profile.html" class="nav-main-item"><img src="img/profile_icon.png"></a>
+              <a href="cart.html" class="nav-main-item"><img src="img/cart_icon.png"></a>
 
-    	    <!-- search bar -->
-    	    <div class="header-row-2">
+            </nav>
+          </div>
+
+
+          <!-- search bar -->
+          <div class="header-row-2">
+            <p>Search Bar Here</p>
+
           </div>
 
           <div class="header-row-3">
-      		  <nav class="nav-row-2">
-              <a href="browse.html" class="nav-main-item">browse</a>
-      	      <a href="updates.html" class="nav-main-item">updates</a>
-              <a href="wishlist.html" class="nav-main-item">Wishlist</a>
-      	      <a href="about.html" class="nav-main-item">about</a>
+            <nav class="nav-row-3">
+              <a href="browse.html" class="nav-main-item">Catalog</a>
+              <a href="updates.html" class="nav-main-item">News</a>
+
+              <a href="about.html" class="nav-main-item">About</a>
             </nav>
           </div>
 
-  	</header>
+    </header>
 
 	<!-- content -->
 	<div class="main-content container">
