minor style change in browse

--- a/about.html
+++ b/about.html
@@ -49,10 +49,20 @@
 		<!-- contact us -->
     <div class="content-item about-contact">
       <h3>Contact Us</h3>
+      <ul>
+        <li>E-mail: ----------</li>
+        <li>Phone1: XXX-XXX-XXX</li>
+        <li>Phone2: XXX-XXX-XXX</li>
+      </ul>
     </div>
     <!-- store addresses -->
     <div class="content-item about-addresses">
       <h3>Store Addresses</h3>
+        <ol>
+          <li>Lorem ipsum dolor sit amet, consectetur adipiscing elit.</li>
+          <li>Cras malesuada metus eu magna elementum, sed tincidunt elit ullamcorper.</li>
+          <li>Etiam volutpat odio sed tempor dignissim.</li>
+        </ol>
     </div>
 
     <!-- FAQ -->
