--- a/detailedProduct.html
+++ b/detailedProduct.html
@@ -38,7 +38,7 @@
           <div class="header-row-3">
       		  <nav class="nav-row-3">
               <a href="browse.html" class="nav-main-item">Catalog</a>
-      	      <a href="updates.html" class="nav-main-item">News</a>
+      	      <a href="news.html" class="nav-main-item">News</a>
 
       	      <a href="about.html" class="nav-main-item">About</a>
             </nav>
