--- a/news.html
+++ b/news.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <title>Updates_events</title>
+    <title>News</title>
   </head>
   <body>
 
@@ -36,7 +36,7 @@
           <div class="header-row-3">
             <nav class="nav-row-3">
               <a href="browse.html" class="nav-main-item">Catalog</a>
-              <a href="updates.html" class="nav-main-item">News</a>
+              <a href="news.html" class="nav-main-item">News</a>
 
               <a href="about.html" class="nav-main-item">About</a>
             </nav>
@@ -47,11 +47,15 @@
 	<!-- content -->
 	<div class="main-content container">
 		<!-- updates -->
-		<div>
-		</div>
-		<!-- events -->
-		<div>
-		</div>
+    <div class="news-container">
+      <h3>updates</h3>
+      <p>Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
+    </div>
+    <!-- events -->
+    <div class="news-container">
+      <h3>events</h3>
+      <p>Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
+    </div>
 	</div>
 
   </body>
