Added Javascript and function pointTo for pointing to other html files.

--- a/browse.html
+++ b/browse.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <script src="js/functions.js">
+    </script>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
@@ -51,7 +53,7 @@
     </div>
     <!-- browse list -->
     <div class="content-item browse-list">
-      <div class="item"><a href="detailedProduct.html">detailedProduct</a></div>
+      <div onclick="pointTo('detailedProduct.html')" class="item">detailedProduct</div>
       <div class="item">item</div>
       <div class="item">item</div>
       <div class="item">item</div>
