changes to css and browse.html

--- a/browse.html
+++ b/browse.html
@@ -50,10 +50,14 @@
 	<div class="main-content container">
 		<!-- search and filter -->
     <div class="content-item browse-filter">
+      <p>Filter by:</p>
     </div>
     <!-- browse list -->
     <div class="content-item browse-list">
-      <div onclick="pointTo('detailedProduct.html')" class="item">detailedProduct</div>
+      <div onclick="pointTo('detailedProduct.html')" class="item">
+      <img src="img/item_1.png" alt="item_1"/><p class="item_name">Manchester United</p><p>2019-2020 Home Kit</p>
+      <p class="price">$109.99</p>
+      </div>
       <div class="item">item</div>
       <div class="item">item</div>
       <div class="item">item</div>
