--- a/profile.html
+++ b/profile.html
@@ -48,6 +48,7 @@
 	<div class="main-content container">
 		<!-- profile information -->
 		<div>
+      <p>Profile</p>
 		</div>
 
 		<!-- order list -->
