--- a/news.html
+++ b/news.html
@@ -47,13 +47,13 @@
 	<!-- content -->
 	<div class="main-content container">
 		<!-- updates -->
-    <div class="content-item">
-      <h3>updates</h3>
+    <div class="content-item news-updates">
+      <h3>Updates</h3>
       <p>Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
     </div>
     <!-- events -->
-    <div class="content-item">
-      <h3>events</h3>
+    <div class="content-item news-events">
+      <h3>Events</h3>
       <p>Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
     </div>
 	</div>
