add grid for detailed product page

--- a/detailedProduct.html
+++ b/detailedProduct.html
@@ -48,9 +48,12 @@
 	<!-- content -->
 	<div class="main-content container">
 		<!-- detailed product -->
-		<div>
-      <a href="cart.html">shopping cart</a>
-		</div>
+      <div class="product-img">product img</div>
+
+      <div class="product-info">product info<br>
+        <a href="cart.html" class="button-buy">shopping cart</a>
+      </div>
+      
 
 	</div>
 
