add grid for shopping cart

--- a/cart.html
+++ b/cart.html
@@ -47,9 +47,17 @@
 	<!-- content -->
 	<div class="main-content container">
 		<!-- shopping cart list -->
-		<div>
-      <a href="shipping.html">shipping method</a>
-		</div>
+      <div class="cart">
+        <div class="cart-item">
+          <p>cart item</p>
+        </div>
+        <div class="cart-item">
+          <p>cart item</p>
+        </div>
+        <div>
+          <a href="shipping.html">shipping method</a>
+        </div>
+      </div>
 
 	</div>
 
