put grid on payment shipping and confirmation page

--- a/confirmation.html
+++ b/confirmation.html
@@ -46,7 +46,10 @@
 
 	<!-- content -->
 	<div class="main-content container">
-    <a href="orderList.html">order list</a>
+    <div class="shipping">
+      <p>confirmed page</p><br>
+      <a href="orderList.html">order list</a>
+    </div>
 	</div>
 
 
