--- a/payment.html
+++ b/payment.html
@@ -46,7 +46,10 @@
 
 	<!-- content -->
 	<div class="main-content container">
-    <a href="confirmation.html">confirmation</a>
+    <div class="shipping">
+      <p>payment info</p><br>
+      <a href="confirmation.html">confirmation</a>
+    </div>
 	</div>
 
 
