--- a/shipping.html
+++ b/shipping.html
@@ -45,7 +45,10 @@
 
 	<!-- content -->
 	<div class="main-content container">
-    <a href="payment.html">payment method</a>
+    <div class="shipping">
+      <p>shipping info</p><br>
+      <a href="payment.html">payment method</a>
+    </div>
 	</div>
 
 
