update shopping cart and order list grid

--- a/cart.html
+++ b/cart.html
@@ -49,10 +49,16 @@
 		<!-- shopping cart list -->
       <div class="cart">
         <div class="cart-item">
-          <p>cart item</p>
+          <div class="image"><p>product image</p></div>
+          <div class="detail">
+            <p>cart item details</p>
+          </div>
         </div>
         <div class="cart-item">
-          <p>cart item</p>
+          <div class="image"><p>product image</p></div>
+          <div class="detail">
+            <p>cart item details</p>
+          </div>
         </div>
         <div>
           <a href="shipping.html">shipping method</a>
