--- a/orderList.html
+++ b/orderList.html
@@ -49,10 +49,16 @@
 	<div class="main-content container">
       <div class="cart">
         <div class="cart-item">
-          <p>order list item</p>
+          <div class="image"><p>product image</p></div>
+          <div class="detail">
+            <p>order list item details</p>
+          </div>
         </div>
         <div class="cart-item">
-          <p>order list item</p>
+          <div class="image"><p>product image</p></div>
+          <div class="detail">
+            <p>order list item details</p>
+          </div>
         </div>
         <div>
           <a href="index.html">back to home</a>
