add grid to profile page

--- a/profile.html
+++ b/profile.html
@@ -45,26 +45,34 @@
     </header>
 
 	<!-- content -->
-	<div class="main-content container">
+	<div class="main-content container profile">
 		<!-- profile information -->
-		<div>
-      <p>Profile</p>
+		<div class="content-item profile-info">
+      <div class="detail">
+        <h3>Profile info</h3>
+      </div>
+      <div class="image">profile image</div>
 		</div>
 
 		<!-- order list -->
-		<div>
+		<div class="content-item profile-order">
+      <h3>Order list</h3>
+      <div><a href="orderList.html">Order list</a></div>
 		</div>
 
 		<!-- security -->
-		<div>
+		<div class="content-item profile-security">
+      <h3>Security Info</h3>
 		</div>
 
 		<!-- notification -->
-		<div>
+		<div class="content-item profile-notification">
+      <h3>Notification</h3>
 		</div>
 
 		<!-- billing information -->
-		<div>
+		<div class="content-item profile-billing">
+      <h3>Billing info</h3>
 		</div>
 
 	</div>
