added grid for home page

--- a/index.html
+++ b/index.html
@@ -45,16 +45,43 @@
   	</header>
 
 	<!-- content -->
-	<div class="main-content container">
+	<div class="main-content container container-home">
 
-		<!-- on sale -->
-		<div class="content-item section-item-1">
-
-			<a href="detailedProduct.html" class="nav-detailed">Detailed Product</a>
+		<!-- category -->
+    <h3>New Arrivals By Catalog</h3>
+		<div class="content-item section-catalog">
+      <div class="catalog">
+        <div class="catalog-img">image</div>
+        <a href="browse.html">Catalog</a>
+      </div>
+      <div class="catalog">Catalog</div>
+      <div class="catalog">Catalog</div>
 		</div>
 
-		<!-- recommended -->
-		<div class="content-item section-item-2">
+		<!-- club -->
+    <h3>Shop By Club</h3>
+		<div class="content-item section-club">
+      <div class="club"><a href="browse.html">Club</a></div>
+      <div class="club">Club</div>
+      <div class="club">Club</div>
+      <div class="club">Club</div>
+      <div class="club">Club</div>
+      <div class="club">Club</div>
+      <div class="club">Club</div>
+      <div class="club">Club</div>
+      <div class="club">Club</div>
+      <div class="club">Club</div>
+      <div class="club">Club</div>
+      <div class="club">Club</div>
+      <div class="club">Club</div>
+      <div class="club">Club</div>
+      <div class="club">Club</div>
+      <div class="club">Club</div>
+      <div class="club">Club</div>
+      <div class="club">Club</div>
+      <div class="club">Club</div>
+      <div class="club">Club</div>
+
 		</div>
 	</div>
 
