Updated index.html with football club icons

--- a/index.html
+++ b/index.html
@@ -61,27 +61,26 @@
 		<!-- club -->
     <h3>Shop By Club</h3>
 		<div class="content-item section-club">
-      <div class="club"><a href="browse.html">Club</a></div>
-      <div class="club">Club</div>
-      <div class="club">Club</div>
-      <div class="club">Club</div>
-      <div class="club">Club</div>
-      <div class="club">Club</div>
-      <div class="club">Club</div>
-      <div class="club">Club</div>
-      <div class="club">Club</div>
-      <div class="club">Club</div>
-      <div class="club">Club</div>
-      <div class="club">Club</div>
-      <div class="club">Club</div>
-      <div class="club">Club</div>
-      <div class="club">Club</div>
-      <div class="club">Club</div>
-      <div class="club">Club</div>
-      <div class="club">Club</div>
-      <div class="club">Club</div>
-      <div class="club">Club</div>
-
+      <div class="club"><img src="img/BPL/arsenal.svg" alt="football_club"/><p>Arsenal</p></div>
+      <div class="club"><img src="img/BPL/aston_villa.svg" alt="football_club"/><p>Aston Villa</p></div>
+      <div class="club"><img src="img/BPL/bournemouth.svg" alt="football_club"/><p>AFC Bournemouth</p></div>
+      <div class="club"><img src="img/BPL/brighton_and_hove_albion.svg" alt="football_club"/><p>Brighton & Hove Albion</p></div>
+      <div class="club"><img src="img/BPL/burnley.svg" alt="football_club"/><p>Burnley</p></div>
+      <div class="club"><img src="img/BPL/chelsea.svg" alt="football_club"/><p>Chelsea</p></div>
+      <div class="club"><img src="img/BPL/crystal_palace.svg" alt="football_club"/><p>Crystal Palace</p></div>
+      <div class="club"><img src="img/BPL/everton.svg" alt="football_club"/><p>Everton</p></div>
+      <div class="club"><img src="img/BPL/leicester_city.svg" alt="football_club"/><p>Leicester City</p></div>
+      <div class="club"><img src="img/BPL/liverpool.svg" alt="football_club"/><p>Liverpool</p></div>
+      <div class="club"><img src="img/BPL/man_city.svg" alt="football_club"/><p>Manchester City</p></div>
+      <div class="club"><img src="img/BPL/man_utd.svg" alt="football_club"/><p>Manchester United</p></div>
+      <div class="club"><img src="img/BPL/newcastle.svg" alt="football_club"/><p>Newcastle United</p></div>
+      <div class="club"><img src="img/BPL/norwich.svg" alt="football_club"/><p>Norwich City</p></div>
+      <div class="club"><img src="img/BPL/sheffield.svg" alt="football_club"/><p>Sheffield United</p></div>
+      <div class="club"><img src="img/BPL/southampton.svg" alt="football_club"/><p>Southampton</p></div>
+      <div class="club"><img src="img/BPL/tottenham.svg" alt="football_club"/><p>Tottenham Hotspur</p></div>
+      <div class="club"><img src="img/BPL/watford.svg" alt="football_club"/><p>Watford</p></div>
+      <div class="club"><img src="img/BPL/west_ham.svg" alt="football_club"/><p>West Ham United</p></div>
+      <div class="club"><img src="img/BPL/wolves.svg" alt="football_club"/><p>Wolverhampton</p></div>
 		</div>
 	</div>
 
