phone number update

--- a/about.html
+++ b/about.html
@@ -51,7 +51,7 @@
       <h3>Contact Us</h3>
       <ul>
         <li>E-mail: ----------</li>
-        <li>Phone1: XXX-XXX-XXX</li>
+        <li>Phone1: (626)243-7837</li>
         <li>Phone2: XXX-XXX-XXX</li>
       </ul>
     </div>
