card-based design for news.html

--- a/news.html
+++ b/news.html
@@ -49,14 +49,32 @@
 		<!-- updates -->
     <div class="content-item news-updates">
       <h3>Updates</h3>
-      <p>Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
+      <div class="card">
+        <h3 class="update">Update</h3>
+        <img src="img/beckham.png" alt="placeholder1"/>
+        <h4>Update 1</h4>
+
+        <p>Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
+      </div>
+      <div class="card">
+        <h3 class="psa">PSA</h3>
+        <img src="img/travoltaconfused.gif" alt="placeholder2"/>
+        <h4>PSA 1</h4>
+
+        <p>Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
+      </div>
+
+      <div class="card">
+        <h3 class="event">Event</h3>
+        <img src="img/solskjaer.png" alt="placeholder3"/>
+        <h4>Event 1</h4>
+
+        <p>Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
+      </div>
+
+      <p></p>
     </div>
-    <!-- events -->
-    <div class="content-item news-events">
-      <h3>Events</h3>
-      <p>Maecenas porttitor sagittis facilisis. Sed dictum sapien eu quam porttitor vehicula. Duis porttitor id odio sed rutrum. Duis porta mauris justo, sed sagittis diam tristique ac. Nullam id arcu eget mi dictum faucibus id nec velit. Nunc dignissim velit lacus. Morbi eget lorem sapien.</p>
-    </div>
-	</div>
+
 
   </body>
 </html>
