added functioning search bar for header.

--- a/browse.html
+++ b/browse.html
@@ -31,7 +31,7 @@
 
     	    <!-- search bar -->
     	    <div class="header-row-2">
-            <p>Search Bar Here</p>
+            <input type="text" placeholder="Search here...">
 
           </div>
 
