--- a/detailedProduct.html
+++ b/detailedProduct.html
@@ -31,7 +31,7 @@
 
     	    <!-- search bar -->
     	    <div class="header-row-2">
-            <p>Search Bar Here</p>
+            <input type="text" placeholder="Search here...">
 
           </div>
 
@@ -53,7 +53,7 @@
       <div class="product-info">product info<br>
         <a href="cart.html" class="button-buy">shopping cart</a>
       </div>
-      
+
 
 	</div>
 
