--- a/orderList.html
+++ b/orderList.html
@@ -30,7 +30,7 @@
 
     	    <!-- search bar -->
     	    <div class="header-row-2">
-            <p>Search Bar Here</p>
+            <input type="text" placeholder="Search here...">
 
           </div>
 
