--- a/profile.html
+++ b/profile.html
@@ -29,7 +29,7 @@
 
           <!-- search bar -->
           <div class="header-row-2">
-            <p>Search Bar Here</p>
+            <input type="text" placeholder="Search here...">
 
           </div>
 
@@ -48,11 +48,11 @@
 	<div class="main-content container profile">
 		<!-- profile information -->
 		<div class="content-item profile-info">
-      <div class="detail">
+      <img src="img/mourinho.png" alt=""/>
+      <div class="profile_detail">
         <h3>Profile info</h3>
       </div>
-      <div class="image">profile image</div>
-		</div>
+
 
 		<!-- order list -->
 		<div class="content-item profile-order">
