--- a/shipping.html
+++ b/shipping.html
@@ -28,7 +28,7 @@
 
           <!-- search bar -->
           <div class="header-row-2">
-            <p>Search Bar Here</p>
+            <input type="text" placeholder="Search here...">
 
           </div>
 
