add form to shipping and payment page

--- a/news.html
+++ b/news.html
@@ -48,7 +48,7 @@
 	<div class="main-content container">
 		<!-- updates -->
     <div class="content-item news-updates">
-      <h3>Updates</h3>
+      <h3>News</h3>
       <div class="card">
         <h3 class="update">Update</h3>
         <img src="img/beckham.png" alt="placeholder1"/>
