change name browse to catalog

--- a/catalog.html
+++ b/catalog.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="css/grid.css">
     <link rel="stylesheet" href="css/styles.css">
     <link rel="stylesheet" href="css/normalize.css">
-    <title>Browse</title>
+    <title>Catalog</title>
   </head>
   <body>
 
@@ -37,7 +37,7 @@
 
           <div class="header-row-3">
       		  <nav class="nav-row-3">
-              <a href="browse.html" class="nav-main-item">Catalog</a>
+              <a href="catalog.html" class="nav-main-item">Catalog</a>
       	      <a href="news.html" class="nav-main-item">News</a>
 
       	      <a href="about.html" class="nav-main-item">About</a>
@@ -49,11 +49,11 @@
 	<!-- content -->
 	<div class="main-content container">
 		<!-- search and filter -->
-    <div class="content-item browse-filter">
+    <div class="content-item catalog-filter">
       <p>Filter by:</p>
     </div>
-    <!-- browse list -->
-    <div class="content-item browse-list">
+    <!-- catalog list -->
+    <div class="content-item catalog-list">
       <div onclick="pointTo('detailedProduct.html')" class="item">
       <img src="img/item_1.png" alt="item_1"/><p class="item_name">Manchester United</p><p>2019-2020 Home Kit</p>
       <p class="price">$109.99</p>
