--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
           <div class="header-row-3">
       		  <nav class="nav-row-3">
-              <a href="browse.html" class="nav-main-item">Catalog</a>
+              <a href="catalog.html" class="nav-main-item">Catalog</a>
       	      <a href="news.html" class="nav-main-item">News</a>
 
       	      <a href="about.html" class="nav-main-item">About</a>
@@ -52,7 +52,7 @@
 		<div class="content-item section-catalog">
       <div class="catalog">
         <div class="catalog-img">image</div>
-        <a href="browse.html">Catalog</a>
+        <a href="catalog.html">Catalog</a>
       </div>
       <div class="catalog">Catalog</div>
       <div class="catalog">Catalog</div>
