--- a/payment.html
+++ b/payment.html
@@ -50,28 +50,32 @@
 	<!-- content -->
 	<div class="main-content container">
     <div class="shipping">
-      <h3>Payment Info</h3><br>
+      <h3>Payment Info</h3>
 
-      <form action="confirmation.html">
-        Select payment method:<br>
-        <input type="radio" name="paymentmethod" value="creditcard" checked>Credit Card<br>
-        <input type="radio" name="paymentmethod" value="other">Other online payment systems<br>
+      <form action="confirmation.html" class="payment-form" method="POST">
+        <ul>
+          <li>Select payment method:</li>
+          <li><input type="radio" name="paymentmethod" value="creditcard" checked>Credit Card</li>
+          <li><input type="radio" name="paymentmethod" value="other">Other online payment systems</li>
+        </ul>
+        <ul>
+          <li>Payment information:</li>
+          <li><input type="text" name="cardnumber" placeholder="Card Number" size="18"><input type="text" name="month" placeholder="MM" size="3"><input type="text" name="year" placeholder="YYYY" size="5"></li>
+          <li><input type="text" name="nameoncard" placeholder="Name on Card"></li>
+          <li><input type="text" name="securitynumber" placeholder="SN" size="4"></li>
+        </ul>
 
-        Payment information:<br>
-        <input type="text" name="nameoncard" value="Name on Card"><br>
-        <input type="text" name="cardnumber" value="card number">
-        <input type="text" name="securitynumber" value="securitynumber">
-        <br>
+        <ul>
 
-        Payment address:<br>
-        <input type="text" name="street" value="street">
-        <input type="text" name="city" value="city">
-        <input type="text" name="province" value="province">
-        <input type="text" name="country" value="country">
-        <input type="text" name="postal" value="postal code">
+        <li>Billing Address:</li>
+        <li><input type="text" name="street" placeholder="Address 1" size="52"></li>
+        <li><input type="text" name="city" placeholder="City" size="30"> <input type="text" name="province" placeholder="Province" size="20"></li>
+        <li><input type="text" name="postal" placeholder="Zip Code" size ="10"> <input type="text" name="country" placeholder="Country" size="18"></li>
 
-        <br>
+
+        <div class="submit-button">
         <input type="submit" value="Submit">
+      </div>
       </form>
     </div>
 	</div>
