--- a/catalog.html
+++ b/catalog.html
@@ -55,11 +55,11 @@
     <!-- catalog list -->
     <div class="content-item catalog-list">
       <div onclick="pointTo('detailedProduct.html')" class="item">
-        
+
       <img src="img/item_1.png" alt="item_1"/><p class="item_name">Manchester United</p><p>2019-2020 Home Kit</p>
       <p class="price">$109.99</p>
       </div>
-      <div class="item"><img src="img/item_2.png" alt="item_2"/><p class="item_name">Tottenham Hotspur</p><p>2018-2019 Third Kit</p>
+      <div onclick="pointTo('detailedProduct.html')" class="item"><img src="img/item_2.png" alt="item_2"/><p class="item_name">Tottenham Hotspur</p><p>2018-2019 Third Kit</p>
       <p class="price">$109.99</p></div>
       <div class="item">item</div>
       <div class="item">item</div>
