complete overhaul and redesign of cart page

--- a/about.html
+++ b/about.html
@@ -48,6 +48,7 @@
 	<div class="main-content container">
 		<!-- contact us -->
     <div class="content-item about-contact">
+      <h3 id="title">About</h3>
       <h3>Contact Us</h3>
       <ul>
         <li>E-mail: ----------</li>
