--- a/cart.html
+++ b/cart.html
@@ -45,23 +45,50 @@
   	</header>
 
 	<!-- content -->
-	<div class="main-content container">
+	<div class="main-content container cart-container">
+
 		<!-- shopping cart list -->
       <div class="cart">
-        <div class="cart-item">
-          <div class="image"><p>product image</p></div>
-          <div class="detail">
-            <p>cart item details</p>
+
+        <div class="cart-card-left cart-box">
+          <div class="cart-item">
+            <img src="img/item_1.png"/>
+              <p>cart item details</p>
+          </div>
+          <div class="cart-item">
+            <img src="img/item_2.png"/>
+              <p>cart item details</p>
+          </div>
+          <div class="cart-item">
+            <img src="img/item_2.png"/>
+              <p>cart item details</p>
+          </div>
+          <div class="cart-item">
+            <img src="img/item_2.png"/>
+              <p>cart item details</p>
           </div>
         </div>
-        <div class="cart-item">
-          <div class="image"><p>product image</p></div>
-          <div class="detail">
-            <p>cart item details</p>
+
+        <div class="cart-info-right cart-box">
+          <div class="cart-info-box">
+            <div class="order-section">
+              <h3>Order Summary</h3>
+            </div>
+            <div class="order-section">
+              <p>Cart Subtotal: $399.99</p>
+              <p>Shipping: $69.99</p>
+
+            </div>
+
+            <div class="order-section">
+              <p>Order Total: $469.98</p>
+
+            </div>
+            <div class="checkout-section">
+              <a href="shipping.html"><button type="button">Checkout</button></a>
+            </div>
+
           </div>
-        </div>
-        <div>
-          <a href="shipping.html">shipping method</a>
         </div>
       </div>
 
