updated grid in detailed product, give some  flexibility to cart and new

--- a/detailedProduct.html
+++ b/detailedProduct.html
@@ -46,13 +46,40 @@
 
   	</header>
 	<!-- content -->
-	<div class="main-content container">
+	<div class="main-content container product">
 		<!-- detailed product -->
-      <div class="product-img">product img</div>
+      <div class="product-left">
+        
+        <div class="product-img">
+          product img
+        </div>
 
-      <div class="product-info">product info<br>
-        <a href="cart.html" class="button-buy">shopping cart</a>
+        <div class="product-info">product info<br>
+
+        </div>
+
+
+
+        <div class="product-review">product review<br>
+        </div>
+        <!-- end left -->
       </div>
+
+      <div class="product-right">
+        <p>Size:</p>
+        <select>
+          <option value="small">S</option>
+          <option value="medium">M</option>
+          <option value="large">L</option>
+          <option value="extra-large">XL</option>
+        </select>
+        <p>Quantity:</p>
+        <input type="text" name="quantity" value="1">
+        <div>
+            <a href="cart.html"><button type="button">Add to Cart</button></a>
+          </div>
+      </div>
+
 
 
 	</div>
