add some colors, change grid in orderlist

--- a/confirmation.html
+++ b/confirmation.html
@@ -47,8 +47,8 @@
 	<!-- content -->
 	<div class="main-content container">
     <div class="shipping">
-      <p>confirmed page</p><br>
-      <a href="orderList.html">order list</a>
+      <h3>Thank you for your purchasing</h3><br>
+      <a href="orderList.html" class="button">view order list</a>
     </div>
 	</div>
 
