--- a/orderList.html
+++ b/orderList.html
@@ -47,23 +47,23 @@
 
 	<!-- content -->
 	<div class="main-content container">
-      <div class="cart">
-        <div class="cart-item">
+      <div class="cart cart-card-left">
+        <div class="cart-item cart-info-box">
           <div class="image"><p>product image</p></div>
           <div class="detail">
             <p>order list item details</p>
           </div>
         </div>
-        <div class="cart-item">
+        <div class="cart-info-box">
           <div class="image"><p>product image</p></div>
           <div class="detail">
             <p>order list item details</p>
           </div>
-        </div>
-        <div>
-          <a href="index.html">back to home</a>
         </div>
       </div>
+        <div class="cart-info-right">
+          <a href="index.html" class="button">back to home</a>
+        </div>
 	</div>
 
 
